<resources>
    <string name="app_name">MobileEducationTracker</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="InsertData">Insert Data</string>
    <string name="deleteData">Delete Data</string>
    <string name="term_title">Term Title</string>
    <string name="end_date">End Date</string>
    <string name="notes">Notes</string>
    <string name="add_notes_here">add notes here..</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="course_name">Course Name</string>
    <string name="start_date">Start Date</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="back">Back</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="due_date">Due Date</string>
    <string name="todo">TODO</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string name="delete_term">Delete Term</string>
    <string name="edit_term">Edit Term</string>


</resources>
