<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/courseRelativeLayoutId"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="10dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/cardview_compat_inset_shadow"
        android:layout_marginLeft="@dimen/cardview_compat_inset_shadow"
        android:layout_marginTop="@dimen/cardview_compat_inset_shadow"
        android:layout_marginEnd="@dimen/cardview_compat_inset_shadow"
        android:layout_marginRight="@dimen/cardview_compat_inset_shadow"
        android:layout_marginBottom="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:id="@+id/cvCourseLinearLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cvCourseTitleTV"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:text="@string/term_title"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cvCourseStartTV"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="-55dp"
                android:padding="4dp"
                android:text="@string/start_date"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/cvCourseEndTV"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="0dp"
                android:padding="4dp"
                android:text="@string/end_date"
                android:textAlignment="center" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
 </RelativeLayout>