<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addCourseFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editCourseTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="Edit Course"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editCourseNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Course Name"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/editCourseNameET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/course_name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editStartDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Start Date"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/editStartDateET"
                    android:layout_width="191dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:ems="10"
                    android:hint="MM/DD/YYYY"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editEndDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="End Date"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/editEndDateET"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="MM/DD/YYYY"
                    android:inputType="textPersonName"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editStatusTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Status"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/editStatusET"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="ex: In Progress..."
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/editNoteTV"
                android:layout_width="match_parent"
                android:minHeight="2dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/notes"
                android:textAlignment="center"
                android:textSize="24sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="50dp">

                <EditText
                    android:id="@+id/editNotesET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/add_notes_here"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:minLines="2"
                    android:scrollbars="vertical"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <Button
                android:id="@+id/editAddCourseCancelBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:text="Cancel" />

            <Button
                android:id="@+id/editAddCourseSaveBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Save" />


        </LinearLayout>
    </ScrollView>


</FrameLayout>
